# shua-struct-rs

./: Cargo.toml  LICENSE.txt  README.md
example/: Cargo.toml  README.md
example/src/: main.rs
shua_struct/: Cargo.toml  README.md
shua_struct/src/: lib.rs
shua_struct/src/field/: array.rs  bool.rs  float.rs  int.rs  mod.rs
shua_struct_macro/: Cargo.toml  README.md
shua_struct_macro/src/: lib.rs
