[package]
name = "shua_struct"
version = "0.1.0"
edition = "2024"
authors = ["Shua <CHA_Shua@outlook.com>"]
license = "MIT"
repository = "https://github.com/Shua-github/shua-struct-rs"
description = "Flexible binary data parsing and building for Rust."

[dependencies]
bitvec = "1.0.1"

[features]
array = []
bool = []
int = []
float = []
all = ["array", "bool", "int", "float"]
