[package]
name = "shua_struct"
version = "0.2.2"
edition = "2024"
authors = ["Shua <CHA_Shua@outlook.com>"]
license = "MIT"
repository = "https://github.com/Shua-github/shua-struct-rs"
description = "Flexible binary data parsing and building for Rust."
readme = "../README.md"

[dependencies]
bitvec = "1.0.1"
shua_struct_macro = { version = "0.2.0", path = "../shua_struct_macro" }

[features]
array = []
bool = []
int = []
float = []
all = ["array", "bool", "int", "float"]
